CollectionExtensionsのテストを追加

--- a/Tests/ShortCircuitTest/ShortCircuitTest.csproj
+++ b/Tests/ShortCircuitTest/ShortCircuitTest.csproj
@@ -16,4 +16,13 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ShortCircuit.Db.Npgsql\ShortCircuit.Db.Npgsql.csproj" />
+    <ProjectReference Include="..\..\ShortCircuit.Db\ShortCircuit.Db.csproj" />
+    <ProjectReference Include="..\..\ShortCircuit.FoDicom\ShortCircuit.FoDicom.csproj" />
+    <ProjectReference Include="..\..\ShortCircuit.Logging.NLog\ShortCircuit.Logging.NLog.csproj" />
+    <ProjectReference Include="..\..\ShortCircuit.Logging\ShortCircuit.Logging.csproj" />
+    <ProjectReference Include="..\..\ShotCircuit\ShortCircuit.csproj" />
+  </ItemGroup>
+
 </Project>
