拡張メソッドのメモを追加

--- a/ShortCircuit.JaJp/ShortCircuit.JaJp.csproj
+++ b/ShortCircuit.JaJp/ShortCircuit.JaJp.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShotCircuit\ShortCircuit.csproj" />
+  </ItemGroup>
+
 </Project>
